# chatgpt

backend/: README.md  pyproject.toml
backend/src/chat/: chat.py  openai.py
backend/src/chat/models/: chat.py
backend/tests/: test_chat.py
